<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/taskCardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="8dp"
        android:clickable="true">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/taskCardLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:id="@+id/taskNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/taskCategory"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:padding="10dp"
                android:text="@string/taskNumberTest"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/taskTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@id/taskNumber"
                android:layout_toStartOf="@id/taskStatus"
                android:padding="10dp"
                android:text="@string/taskTitleTest"
                android:textAlignment="viewStart"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/taskStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/taskDatePlan"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:padding="10dp"
                android:text="@string/taskStatusTest" />


            <TextView
                android:id="@+id/taskCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@id/taskTitle"
                android:layout_toStartOf="@+id/taskDatePlan"
                android:padding="10dp"
                android:text="@string/taskCategoryTest" />

            <TextView
                android:id="@+id/taskDatePlan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@id/taskTitle"
                android:padding="10dp"
                android:text="@string/taskDateTest" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>


</LinearLayout>
