<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="metaplatform.ele638.tracker.feature.TaskActivity"
    tools:showIn="@layout/activity_task">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/text_margin"
        android:orientation="vertical">

        <TextView
            android:id="@+id/DtaskCaption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/DtextCaption"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/cardview_dark_background"
            android:padding="12dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/DTaskCategoryTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/DtaskCategory"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/DTaskCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="5dp"
                android:text="test" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/DtaskProject"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/DTaskProject"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="test" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/DtaskPlanDate"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/DTaskPlanDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="5dp"
                android:text="test" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/DtaskWaitingDate"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/DTaskWaitingDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="test" />
        </LinearLayout>
    </LinearLayout>


</android.support.v4.widget.NestedScrollView>
